Duplicated folder erased

--- a/lagonzal_test/frontend/index.html
+++ b/lagonzal_test/frontend/index.html
@@ -6,7 +6,6 @@
   <title>Pong Minimalista</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
@@ -21,26 +20,26 @@
 		</div>
 	</header>
 
-	<div class="main-container">
-		<div class="button-area">
+	<div class="main-container" id="main-container">
+		<div class="button-area" id="button-area">
 			<div class="row">
 				<div class="col-12 mb-3">
-					<button class="btn btn-custom">PARTIDA LOCAL</button>
+					<button class="btn btn-custom" id="play-local">PARTIDA LOCAL</button>
 				</div>
 				<div class="col-12 mb-3">
-					<button class="btn btn-custom">PARTIDA ONLINE</button>
+					<button class="btn btn-custom" id="play-online">PARTIDA ONLINE</button>
 				</div>
 				<div class="col-12 mb-3">
-					<button class="btn btn-custom">TORNEO</button>
+					<button class="btn btn-custom" id="play-tournament">TORNEO</button>
 				</div>
 				<div class="col-12 mb-3">
-					<button class="btn btn-custom">TUTORIAL</button>
+					<button class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
 				</div>
 				<div class="col-6 mb-3">
-					<button class="btn btn-login">INICIAR SESIÓN</button>
+					<button class="btn btn-login" id="btn-login">INICIAR SESIÓN</button>
 				</div>
 				<div class="col-6 mb-3">
-					<button class="btn btn-singin">CREAR CUENTA</button>
+					<button class="btn btn-singin" id="btn-singin">CREAR CUENTA</button>
 				</div>
 			</div>
 		</div>
@@ -53,5 +52,6 @@
 	</footer>
 
 	<script src="https://kit.fontawesome.com/57a1b11112.js" crossorigin="anonymous"></script>
+	<script type="module" src="script/buttonListener.js"></script>
 </body>
 </html>
