--- a/lagonzal_test/frontend/index.html
+++ b/lagonzal_test/frontend/index.html
@@ -7,12 +7,13 @@
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style/index.css">
+  <link rel="stylesheet" href="style/login.css">
 </head>
 <body>
 
 	<header class="container-fluid">
 		<div class="logo">
-			<button class="home-button" id="home-button"><img src="images/PongLogo.png" alt="Pong page logo"></button>
+			<button class="home-button col-12" id="home-button"><img src="images/PongLogo.png" alt="Pong page logo"></button>
 		</div>
 		<div>
 			<button class="header-button" id="search-button"><i class="fa-solid fa-magnifying-glass" style="font-size: 30px;color:white;"></i></button>
@@ -35,10 +36,10 @@
 				<div class="col-12 mb-3">
 					<button class="btn btn-custom" id="play-tutorial">TUTORIAL</button>
 				</div>
-				<div class="col-6 mb-3">
+				<div class="col-12 col-md-6 mb-3">
 					<button class="btn btn-login" id="btn-login">INICIAR SESIÓN</button>
 				</div>
-				<div class="col-6 mb-3">
+				<div class="col-12 col-md-6 mb-3">
 					<button class="btn btn-singin" id="btn-singin">CREAR CUENTA</button>
 				</div>
 			</div>
